# ops-copilot

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: models.py  routes.py
data/runbooks/: database_troubleshooting.md  deployment_guide.md  incident_response.md
eval/: prompts.jsonl  run_eval.py  schema.json
tests/: conftest.py  test_agent.py
worker/: tasks.py
worker/agent/: planner.py  tools.py
